@@ -1227,15 +1227,23 @@ WIDGET_DEFAULT = {
         "edge_fade_in_radius": 0.6,
         "edge_fade_out_radius": 0.98,
         "show_overlap_indicator": True,
-        "overlap_detection_range_multiplier": 6,
+        "show_overlap_indicator_in_cone_style": False,
+        "overlap_cone_angle": 120,
+        "overlap_nearby_range_multiplier": 5,
+        "overlap_critical_range_multiplier": 1,
         "indicator_size_multiplier": 8,
-        "indicator_color": "#FFFF00",
+        "indicator_color_nearby": "#FFFF00",
         "indicator_color_critical": "#FF6600",
         "show_center_mark": True,
         "center_mark_style": 0,
         "center_mark_radius": 30,
         "center_mark_width": 1,
         "center_mark_color": "#888888",
+        "show_angle_mark": True,
+        "angle_mark_style": 0,
+        "angle_mark_radius": 30,
+        "angle_mark_width": 1,
+        "angle_mark_color": "#888888",
         "show_distance_circle": True,
         "distance_circle_1_radius": 10,
         "distance_circle_1_style": 0,
